Fix some details on mobile

--- a/src/assets/styles/components/CardConteiner.scss
+++ b/src/assets/styles/components/CardConteiner.scss
@@ -6,7 +6,8 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 20px 80px;
-    @media screen and (max-width: $laptop-s) {
+    @media screen and (max-width: $tablet) {
         flex-direction: column;
+        padding: 20px 0;
     }
 }
