--- a/src/assets/styles/components/Search.scss
+++ b/src/assets/styles/components/Search.scss
@@ -7,6 +7,9 @@
     flex-direction: column;
     justify-content: center;
     color: $dark-gray-color;
+    @media screen and (max-width: $tablet){
+        margin-left: 0;
+    }
 }
 
 .search__title{
